--- a/app/src/main/res/layout/activity_login_bind_phone.xml
+++ b/app/src/main/res/layout/activity_login_bind_phone.xml
@@ -78,11 +78,48 @@
                 android:layout_marginTop="@dimen/dp_10"
                 android:background="@color/line_color" />
 
+
+            <LinearLayout
+                android:id="@+id/ll2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/view"
+                android:layout_marginHorizontal="@dimen/common_margin_26"
+                android:layout_marginTop="@dimen/dp_10">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/icon_login_sjh" />
+
+                <EditText
+                    android:id="@+id/et_input_mm"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:hint="请输入密码"
+                    android:padding="@dimen/dp_10"
+                    android:textColor="@color/color_333333"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+            <View
+                android:id="@+id/view1"
+                android:layout_width="match_parent"
+                android:layout_height="0.8dp"
+                android:layout_below="@id/ll2"
+                android:layout_marginHorizontal="@dimen/common_margin_26"
+                android:layout_marginTop="@dimen/dp_10"
+                android:background="@color/line_color" />
+
             <LinearLayout
                 android:id="@+id/ll3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/view"
+                android:layout_below="@id/view1"
                 android:layout_marginHorizontal="@dimen/common_margin_26"
                 android:layout_marginTop="@dimen/dimen_20dp">
 
